--- a/firebaseTools/public/index.html
+++ b/firebaseTools/public/index.html
@@ -23,7 +23,7 @@
         <a class="nav-link" href="./ledController.html">客廳主燈控制<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="RGBLed.html">LRGB-Led</a>
+        <a class="nav-link" href="RGBLogin.html">LRGB-Led</a>
       </li>
 
       <li class="nav-item ">
