range event listener

--- a/firebaseTools/public/RGBLed.html
+++ b/firebaseTools/public/RGBLed.html
@@ -62,7 +62,7 @@
         <p class="lead">透過Firebase及時顯示燈狀態 </p>
         <hr class="my-4">
 
-        <div class="container">
+        <div class="container" id="displayMessage">
             <div class="row">
                 <div class="col-9 col-md-8 col-sm-7">
                     <label for="r">紅色(R)</label>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="col-3 col-md-4 col-sm-5">
                     <button type="button" class="btn btn-success">
-                        Green <span class="badge badge-light"  id="gBadge">4</span>
+                        Green <span class="badge badge-light" id="gBadge">4</span>
                     </button>
                 </div>
 
@@ -136,7 +136,7 @@
         database = firebase.database();
         console.log("database ready!")
         var rgbRef = database.ref("iot20191126/RGBLed");
-        rgbRef.on("value",snapshot => {
+        rgbRef.on("value", snapshot => {
             rgbValue = snapshot.val();
             let rValue = rgbValue["R"];
             let gValue = rgbValue["G"];
@@ -149,6 +149,27 @@
             $('#gBadge').text(gValue);
             $('#bBadge').text(bValue);
         })
+
+        //range event listener
+        $('#displayMessage').change(eventObject => {
+            console.log(eventObject.target);
+            let targetObject = eventObject.target;
+            switch (targetObject.id) {
+                case "r":
+                    console.log("r");
+                    console.log($(targetObject).val());
+                    break;
+                case "g":
+                    console.log("g");
+                    console.log($(targetObject).val());
+                    break;
+                case "b":
+                    console.log("b");
+                    console.log($(targetObject).val());
+                    break;
+            }
+        });
+
 
     });
 
