--- a/firebaseTools/public/RGBLed.html
+++ b/firebaseTools/public/RGBLed.html
@@ -35,28 +35,28 @@
 
 <div class="container root">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand h1 " href="#">2019Iot物聯網</a>
+        <a class="navbar-brand h1 " href="index.html">2019Iot物聯網</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="ledController.html">客廳主燈開關<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="RGBLed.html">RGB LED</a>
-                </li>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="./ledController.html">客廳主燈控制<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="RGBLed.html">LRGB-Led</a>
+      </li>
 
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-            </ul>
-
-        </div>
+      <li class="nav-item active">
+        <a class="nav-link " href="MCP3008LED.html" tabindex="-1" >MCP3008-LED</a>
+      </li>
+    </ul>
+  </div>
     </nav>
+	
     <div class="jumbotron">
         <h1 class="display-4">RGBLED控制室</h1>
         <p class="lead">透過Firebase及時顯示燈狀態 </p>
@@ -70,7 +70,7 @@
                 </div>
                 <div class="col-3 col-md-4 col-sm-5">
                     <button type="button" class="btn btn-danger">
-                        Red <span class="badge badge-light" id="rBadge">4</span>
+                        Red <span class="badge badge-light" id="rBadge"></span>
                     </button>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="col-3 col-md-4 col-sm-5">
                     <button type="button" class="btn btn-success">
-                        Green <span class="badge badge-light" id="gBadge">4</span>
+                        Green <span class="badge badge-light" id="gBadge"></span>
                     </button>
                 </div>
 
@@ -94,8 +94,8 @@
                     <input type="range" class="custom-range" min="0" max="100" step="10" id="b">
                 </div>
                 <div class="col-3 col-md-4 col-sm-5">
-                    <button type="button" class="btn btn-primary" id="bBadge">
-                        Blue <span class="badge badge-light">4</span>
+                    <button type="button" class="btn btn-primary">
+                        Blue  <span class="badge badge-light" id="bBadge"></span>
                     </button>
                 </div>
 
