--- a/firebaseTools/public/ledController.html
+++ b/firebaseTools/public/ledController.html
@@ -35,27 +35,27 @@
 
 <div class="container root" >
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand h1 " href="#">2019Iot物聯網</a>
+    <a class="navbar-brand h1 " href="index.html">2019Iot物聯網</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="ledController.html">客廳主燈開關<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="RGBLogin.html">LRGB-Led</a>
-            </li>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="./ledController.html">客廳主燈控制<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="RGBLed.html">LRGB-Led</a>
+      </li>
 
-            <li class="nav-item ">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-        </ul>
-
-    </div>
+      <li class="nav-item active">
+        <a class="nav-link " href="MCP3008LED.html" tabindex="-1" >MCP3008-LED</a>
+      </li>
+    </ul>
+  </div>
+  
 </nav>
     <div class="jumbotron">
         <h1 class="display-4">客廳燈狀態</h1>
