--- a/firebaseTools/public/index.html
+++ b/firebaseTools/public/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">2019Iot物聯網</a>
+  <a class="navbar-brand" href="index.html">2019Iot物聯網</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -23,16 +23,16 @@
         <a class="nav-link" href="./ledController.html">客廳主燈控制<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="RGBLogin.html">LRGB-Led</a>
+        <a class="nav-link" href="RGBLed.html">LRGB-Led</a>
       </li>
 
-      <li class="nav-item ">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      <li class="nav-item active">
+        <a class="nav-link " href="MCP3008LED.html" tabindex="-1" >MCP3008-LED</a>
       </li>
     </ul>
-
   </div>
 </nav>
+
 <div class="jumbotron">
   <h1 class="display-4">物聯網</h1>
   <p class="lead">IoT技術（英語：Internet of Things[1]，縮寫IoT），又稱物聯網，是網際網路、傳統電信網等的資訊承載體，讓所有能行使獨立功能的普通物體實現互聯互通的網路[2]。IoT一般為無線網，而由於每個人周圍的裝置可以達到一千至五千個，所以IoT可能要包含500兆至一千兆個物體。在IoT上，每個人都可以應用電子標籤將真實的物體上網聯結，在IoT上都可以查出它們的具體位置。通過IoT可以用中心電腦對機器、裝置、人員進行集中管理、控制，也可以對家庭裝置、汽車進行遙控，以及搜尋位置、防止物品被盜等，類似自動化操控系統，同時透過收集這些小事物的資料，最後可以匯聚成巨量資料，包含重新設計道路以減少車禍、都市更新、災害預測與犯罪防治、流行病控制等等社會的重大改變，實現物和物相聯。</p>
